Fixed reload button alignment as well as added GitHub link

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -115,6 +115,7 @@ body {
 
 #reload-button {
     height: 100%;
+    vertical-align: top;
     line-height: 100%;
     border: none;
     text-align: center;
@@ -128,6 +129,7 @@ body {
 #timer {
     float: right;
     width: 50px;
+    height: 100%;
     margin: 0;
     font-size: 50px;
     font-family: Arial;
@@ -138,6 +140,23 @@ body {
     .dur-btn:hover, #theme-content button:hover, #theme-dropup:hover #cur-theme-btn {
     filter: brightness(.8);
     cursor: pointer;
+}
+
+#footer {
+    position: fixed;
+    left: 50%;
+    bottom: 0px;
+    margin: 10px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+}
+
+#footer a {
+    font-family: verdana, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    text-decoration: none;
+    color: inherit;
 }
 
 #cur-theme-btn {
